--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Etch-a-sketch</title>
         <link rel="stylesheet" href="style.css">
-        <script link="script.js" defer></script>
+        <script src="script.js" defer></script>
     </head>
     <body>
         <div class="container"></div>
