--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <h1 style="text-align: center; font-weight: bold; font-size: 50px;">Etch-a-sketch</h1>
         <button id="btn">Click me</button>
         <div class="container"></div>
     </body>
